# pythonic-project-samples

./: Pipfile  README.md  setup.cfg
.github/: release.yml
automotive_data_etl/: LICENSE  README.md  pyproject.toml
automotive_data_etl/src/automotive_data_etl/: __init__.py  cmdline.py  constants.py  context.py  executor.py
automotive_data_etl/src/automotive_data_etl/configs/: dev.toml  global.toml  prod.toml  test.toml
automotive_data_etl/src/automotive_data_etl/dependencies/: config.py  logger.py  spark.py
automotive_data_etl/src/automotive_data_etl/tasks/abstract/: task.py  transform.py
automotive_data_etl/src/automotive_data_etl/tasks/automotive_task/: automotive_transform.py  task.py
automotive_data_etl/tests/: test_task.py  test_version.py
automotive_data_etl/tmp/input/: car_price.csv
automotive_data_etl/tmp/output/: .part-00000-96709ec5-4226-47a1-8238-96847d29b2d3-c000.json.crc  part-00000-96709ec5-4226-47a1-8238-96847d29b2d3-c000.json
pyspark_etl_example/: LICENSE  README.md  pyproject.toml
pyspark_etl_example/data/output/: .part-00000-8e743aff-22c5-468b-acad-0191a72351ba-c000.json.crc  part-00000-8e743aff-22c5-468b-acad-0191a72351ba-c000.json
pyspark_etl_example/src/pyspark_etl_example/: app.py  constants.py  executor.py
pyspark_etl_example/src/pyspark_etl_example/configs/: dev.toml  global.toml  test.toml
pyspark_etl_example/src/pyspark_etl_example/dependecies/: config.py  log.py  spark.py
pyspark_etl_example/src/pyspark_etl_example/tasks/abstract/: task.py  transform.py
pyspark_etl_example/src/pyspark_etl_example/tasks/car_etl_example/: car_transform.py  task.py
pyspark_etl_example/src/pyspark_etl_example/utils/: __init__.py  exception.py
pyspark_etl_example/tests/: test_version.py
src/word_count/: cmdline.py  counter.py
tests/: test_cmdline.py  test_counter.py
