[tool.poetry]
name = "automotive_data_etl"
version = "0.1.0"
description = "This is my first etl package, i love it."
readme = "README.md"
authors = ["ming <ming@gmail.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"
stevedore = "^4.0.0"
dynaconf = "^3.1.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.plugins.console_scripts]
'automotive_data_etl' = "automotive_data_etl.cmdline:main"

[tool.poetry.plugins."etl_tasks"]
automotive_task = "automotive_data_etl.tasks.automotive_task.task:AutomotiveDataTask"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
