[tool.poetry]
name = "pyspark_etl_example"
version = "0.1.0"
description = "My pyspark etl project template"
readme = "README.md"
authors = ["Jingyuan <Jingyuan.ren@zncdata.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"
stevedore = "^4.0.0"
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
isort = "^5.10.1"
pytest = "^7.1.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"

[tool.poetry.plugins."etl_tasks"]
car_etl_example = "pyspark_etl_example.tasks.car_etl_example.car_transform:CarTransform"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
